--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
+.todo {
+  margin: 2rem auto;
+}
 
+.todo__form {
+  /* background-color: red; */
+  width: 70%;
+  margin: 0rem auto;
+  padding: 1rem;
+}
